Finished 6.1 Scottish Gaelic

--- a/case-studies.tex
+++ b/case-studies.tex
@@ -7,27 +7,44 @@ After having done a broad review of open source code for low resource languages 
 \subsection{Scottish Gaelic}
 \label{sec:gaelic}
 
-Scottish Gaelic is a Celtic language spoken by roughly 60,000 people mainly in the United Kingdom and to a lesser extent in Canada, which UNESCO defines as {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}} Gaelic - sometimes called Scots Gaelic, simply Gaelic, or the Gaelic - is a Goidelic or Q-Celtic language, along with Manx and Irish (also sometimes called Irish Gaelic, but here always referred to as Irish). This means that, while related to the Brythonic languages of Welsh, Cornish and Breton, it is different enough to not be able to benefit from the many resources available in Welsh, which, while endangered, has a much stronger academic interest and presence in the United Kingdom, with roughly half a million speakers.
+Scottish Gaelic (G\`aidhlig is the autonym) is a Celtic language spoken by roughly 60,000 people mainly in the United Kingdom and to a lesser extent in Canada. Gaelic - sometimes called Scots Gaelic, simply Gaelic, or the Gaelic - is a Goidelic or Q-Celtic language, along with Manx and Irish (also sometimes called Irish Gaelic, but here always referred to as Irish). This means that, while related to the Brythonic languages of Welsh, Cornish and Breton, it is different enough to not be able to benefit from the many resources available in Welsh, which, while endangered, has a much stronger academic interest and presence in the United Kingdom, with roughly half a million speakers. Gaelic has traditionally been heavily repressed, both politically and culturally, which has lead to its usage in largely restricted or rural areas, and in the domains of the house, church, and family \citep{mackinnon1991past}.
 
-The 2011 Scottish Census indicates that out of the total amount of Gaelic speakers, only around half - 32,191 person to be exact - read and write in Gaelic.\footnote{\href{http://www.scotlandscensus.gov.uk/}{http://www.scotlandscensus.gov.uk/. Last accessed April~27, 2018.}} 6,218 speak and read the language, but do not write it, while 4,646 can read it, but don't speak or write it. Gaelic officially is not a national language, although it is afforded certain protections under the European Charter for Regional or Minority Languages\footnote{\href{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148}{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148. Last accessed April~27, 2018.}} (although, as this is an EU charter, it is unclear whether Britain will continue to ratify it following their impending exit from the European Union). The Gaelic Language (Scotland) Act of 2005 gave Gaelic official status as an official language of Scotland\footnote{\href{http://www.legislation.gov.uk/asp/2005/7}{http://www.legislation.gov.uk/asp/2005/7. Last accessed April~27, 2018.}}, and set up the B\`ord na G\`aidhlig\footnote{\href{http://www.gaidhlig.scot/}{http://www.gaidhlig.scot/. Last accessed April~27, 2018.}} as a language developmental body tasked with protecting and vitalising the Gaelic language. The B\`ord officially is tasked with promoting and facilitating educational materials, but the initial charter makes no mention of language technology. The National Gaelic Language Plan 2018-2023\footnote{\href{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/. Last accessed April~27, 2018.}} \citep{bord2018national} mention the Digital Archive of Scottish Gaelic (DASG)\footnote{\href{http://dasg.ac.uk/en}{http://dasg.ac.uk/en. Last accessed April~27, 2018.}}, the largest corpus project for Gaelic, but don't specify other language technology being developed (excepting a brief mention of working with Ireland and Nova Scotia developing shared technology and resources. 
+The 2011 Scottish Census indicates that out of the total amount of Gaelic speakers, only around half - 32,191 person to be exact - read and write in Gaelic.\footnote{\href{http://www.scotlandscensus.gov.uk/}{http://www.scotlandscensus.gov.uk/. Last accessed April~27, 2018.}} 6,218 speak and read the language, but do not write it, while 4,646 can read it, but don't speak or write it. Gaelic officially is not a national language, although it is afforded certain protections under the European Charter for Regional or Minority Languages\footnote{\href{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148}{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148. Last accessed April~27, 2018.}} (although, as this is an EU charter, it is unclear whether Britain will continue to ratify it following their impending exit from the European Union). The Gaelic Language (Scotland) Act of 2005 (GLS) gave Gaelic official status as an official language of Scotland\footnote{\href{http://www.legislation.gov.uk/asp/2005/7}{http://www.legislation.gov.uk/asp/2005/7. Last accessed April~27, 2018.}}, and set up the B\`ord na G\`aidhlig\footnote{\href{http://www.gaidhlig.scot/}{http://www.gaidhlig.scot/. Last accessed April~27, 2018.}} as a language developmental body tasked with protecting and vitalising the Gaelic language.
 
+The B\`ord officially is tasked with promoting and facilitating educational materials, but the initial charter makes no mention of language technology. The National Gaelic Language Plan 2018-2023\footnote{\href{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/. Last accessed April~27, 2018.}} \citep{bord2018national} mention the Digital Archive of Scottish Gaelic (DASG)\footnote{\href{http://dasg.ac.uk/en}{http://dasg.ac.uk/en. Last accessed April~27, 2018.}}, the largest corpus project for Gaelic, but don't specify other language technology being developed (excepting a brief mention of working with Ireland and Nova Scotia developing shared technology and resources. There are some primary and secondary schools, as well as various Gaelic Language and Studies degrees at English-speaking universities, as well as one Gaelic-speaking university Sabhal M\`or Ostaig\footnote{\href{http://www.smo.uhi.ac.uk/en/}{http://www.smo.uhi.ac.uk/en/. Last accessed April~27, 2018.}} on Skye; educational material from the B\`ord is mainly focused in these areas. 
 
-A large corpus compiled by the An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}} \citep{scannell2007crubadan}. % Mentioned directly in the text
+\subsubsection{Language Vitality Status}
 
-ODIN has exactly 59 IGT entries for Scottish Gaelic.
+Gaelic has an EGIDS rating of 2, as it is a provincial language given the 2005 GLS Act.\footnote{\href{https://www.ethnologue.com/language/gla}{https://www.ethnologue.com/language/gla. Last accessed April~27, 2018.}}  \citet{lewis2009ethnologue} notes regarding language use that "Resurgence of interest in Scottish Gaelic in 1990s. A number of children learn the language but there are serious problems in language maintenance even in the core areas \citep{salminen2007endangered}. Home, church, community." UNESCO judges it to be {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}} The Endangered Languages Project describes it as Threatened or Vulnerable, depending on the source,\footnote{\href{http://endangeredlanguages.com/lang/3049}{http://endangeredlanguages.com/lang/3049. Last accessed April~27, 2018.}} as \citet{salminen2007europe} gives a much smaller population number of 20k for speakers than the other census-based data. \citet{kornai2013digital}'s rating declares it as {\it Living}.\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656. Last accessed April~27, 2018.}} 
 
+\subsubsection{Language Resources}
+\label{subsec:gaelic-resources}
 
-As it is similar to Irish, it is a good example of how code from related languages can be used to bootstrap efforts to build code for its own language. I'll talk in depth about the language, its structure and grammar as related to code, its users and their use cases, and efforts to use code to make Scottish Gaelic digitally ascend.
+Gaelic has a long, written history. Today, there are a plethora of written, audio, and video resources. Some of these have been bundled into linguistic corpora. The DASG is the largest corpus for Gaelic available on the web; however, it is not permissively licensed for modification, distribution, or reproduction, and so cannot be considered open source (although it is open access).\footnote{\href{http://dasg.ac.uk/about/terms/en}{http://dasg.ac.uk/about/terms/en. Last accessed April~27, 2018.}} OLAC has 26 resources for Gaelic, including large multilingual corpora, as well.\footnote{\href{http://www.language-archives.org/language/gla}{http://www.language-archives.org/language/gla. Last accessed April~27, 2018.}} A large corpus compiled by the An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}} \citep{scannell2007crubadan}. WALS has 61 typological features listed for Gaelic\footnote{\href{http://wals.info/languoid/lect/wals_code_gae}{http://wals.info/languoid/lect/wals\_code\_gae. Last accessed April~27, 2018.}}, and Glottolog 35 references.\footnote{\href{http://glottolog.org/resource/languoid/id/scot1245}{http://glottolog.org/resource/languoid/id/scot1245. Last accessed April~27, 2018.}} ODIN has 59 IGT entries for Scottish Gaelic.\footnote{\href{http://odin.linguistlist.org/}{http://odin.linguistlist.org/. Last accessed April~27, 2018.}}
 
-%% Mention Ceitidh https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh
+Some of these corpora are annotated - for instance, the Annotated Reference Corpus of Scottish Gaelic (ARCOSG)\footnote{\href{https://datashare.is.ed.ac.uk/handle/10283/2011}{https://datashare.is.ed.ac.uk/handle/10283/2011. Last accessed April~27, 2018.}} \citep{ARCOSG2016, lamb2014scottish}, which used an Irish POS tagger \citep{ui2006part} to project annotations, and which was funded by the B\`ord na G\`aighlig. This resource was used to automatically derive categorial grammars \citep{batchelor2016automatic}, and to develop POS taggers directly for Gaelic \citep{lamb2014developing}. A dependcy-structure corpus is being developed \citep{batchelor2014gdbank}, as are word-embedding models \citep{lamb2016developing}. The source code for \citet{batchelor2014gdbank, batchelor2016automatic} is available on GitHub.\footnote{\href{https://github.com/colinbatchelor/gdbank/}{https://github.com/colinbatchelor/gdbank/. Last accessed April~27, 2018.}} Some of these papers were presented at the first Celtic Language Technology Workshop in Dublin in 2014. The amount of resources show clearly that Gaelic is not entirely on the fringe of academic research, although it is generally considered a low resource language. 
 
-%%  In 2001 the UK Government ratified the European Charter for Regional or Minority Languages (hereafter ECRML), recognising Ulster Scots and Irish in Northern Ireland, Welsh in Wales, Scots and Gaelic in Scotland, but not Cornish. Writing during the build-up to ratification, Dunbar (2000: 68) argued the case for Cornish: - Cornish, Sayers
+The Cr\'ubad\'an corpus was used to create an open source Hunspell spellchecker\footnote{\href{https://github.com/kscanne/hunspell-gd }{https://github.com/kscanne/hunspell-gd . Last accessed April~27, 2018.}}\footnote{\href{https://github.com/gooselinux/hunspell-gd}{https://github.com/gooselinux/hunspell-gd} is probably derivative. Last accessed April~27, 2018}, which is the spellchecker for "LibreOffice, OpenOffice.org, Mozilla Firefox 3 and Thunderbird, Google Chrome, and it is also used by proprietary software packages, like macOS, InDesign, memoQ, Opera and SDL Trados."\footnote{\href{https://hunspell.github.io/}{https://hunspell.github.io/. Last accessed April~27, 2018.}} This spellchecker was built with the help of Michael Bauer, an independent Gaelic technologist who runs a small Gaelic technology consultancy called Am Faclair Beag\footnote{\href{http://www.faclair.com/}{http://www.faclair.com/. Last accessed April~27, 2018.}}, and also has ports for OpenOffice directly\footnote{\href{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/. Last accessed April~27, 2018.}} and a Firefox extension.\footnote{\href{https://extensions.openoffice.org/en/project/faclair-afb}{https://extensions.openoffice.org/en/project/faclair-afb. Last accessed April~27, 2018.}} An Faclair Beag also offers an online dictionary with over 85k words\footnote{\href{http://www.faclair.com/GaelicDictionaryAbout.html\#About}{http://www.faclair.com/GaelicDictionaryAbout.html\#About. Last accessed April~27, 2018.}} 
+ (and almost a million forms\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html. Last accessed April~27, 2018.}}) and in inbuilt lemmatizer.\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html. Last accessed April~27, 2018.}} 
+ 
+ More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh. Last accessed April~27, 2018.}} (pronounced 'Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\'ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\'{U}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/. Last accessed April~27, 2018.}}, which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
+ 
+Navigating resources to identify what is open source and what isn't is difficult. As mentioned in Section~\ref{subsec:where-is-open-source-code}, one of the OSI's definitions for open source was that it be well publicised. This cannot be said to be the case for coding resources for Gaelic; there is no central location for viewing tools. The LRE Map has no Gaelic resources, although a POS Tagger, two corpora, a tokenizer, and Babouk corpus tool resource are mentioned for Irish.\footnote{\href{http://www.resourcebook.eu/searchll.php}{http://www.resourcebook.eu/searchll.php. Last accessed April~27, 2018.}} Linghub returns 30 entries - not many, considering it is an aggregator.\footnote{\href{http://linghub.org/search/?offset=20&query=Gaelic}{http://linghub.org/search/?offset=20\&query=Gaelic. Last accessed April~27, 2018.}} GitHub returns 62 repositories that mention Gaelic\footnote{\href{https://github.com/search?q=gaelic}{https://github.com/search?q=gaelic. Last accessed April~27, 2018.}}, although it is unclear if these are for Irish.
+
+The best resource is arguable Kornai's lab page\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656. Last accessed April~27, 2018.}} (again, in development). While not linking directly, it does give some information. It notes that there are: several language packs at the OS level for Ubuntu and Windows input, but not one for Mac, probably because Gaelic uses the Roman alphabet and a UK keyboard suffices for most needs; a large Wikipedia; a Hunspell checker; OLAC texts (with marginally out of date numbers); a large Cr\'ubad\'an corpus (1,541,302 words and 17,308 documents), as well as a large Indigenous Tweets corpus with half a million words; and general coverage in Omniglot,\footnote{\href{http://omniglot.com/writing/gaelic.htm}{http://omniglot.com/writing/gaelic.htm. Last accessed April~27, 2018.}} bible.org,\footnote{\href{https://bible.org/}{https://bible.org/. Last accessed April~27, 2018.}} Panlex,\footnote{\href{https://panlex.org/}{https://panlex.org/. Last accessed April~27, 2018.}} and the Leipzig corpora \citep{goldhahn2012building}.\footnote{\href{http://wortschatz.uni-leipzig.de/en/download/}{http://wortschatz.uni-leipzig.de/en/download/. Last accessed April~27, 2018.}} Some of the stats are dubious. For instance, 15k wikipedia users seems odd for a language where there a total population of 30k literate speakers; and it is in WALS, quite clearly. However, in general, this gives a better overview than any other source. 
+
+As far as I am aware, the highest amount of code resources for Gaelic which are directly linked and open source is the corpus described in Section~\ref{sec:solutions}. There are six resources mentioned in the list\footnote{\href{https://github.com/RichardLitt/low-resource-languages\#scottish-gaelic}{https://github.com/RichardLitt/low-resource-languages\#scottish-gaelic. Last accessed April~27, 2018.}}, which was largely sourced by manually inspecting each of the GitHub repositories mentioning "Gaelic", and also through personal curation during general research for this paper. 
+
+Ideally, researchers would start to open source more of their code involving Gaelic. However, there are so few researchers and language communities currently working on Gaelic HLT that this be na\"{i}ve wishing; indeed, the main researcher over the past decade for Gaelic releases most of his code publicly; that is, Kevin Scannell of \citet{scannell2007crubadan}. And his focus is mainly on Irish. One solution would be to implement a Scottish Gaelic computational linguistics course at one of the major Scottish universities, such as the University of Edinburgh, Glasgow, St. Andrews, or potentially at Sabhal M\`or Ostaig. This option would reward further study. 
+
 \subsection{Naskapi}
 \label{sec:naskapi}
 
 % \subsubsection{Language Background}
 
-Naskapi is a Cree language in the Algonquin family spoken in central Quebec \cite{MacKenzie-and-Jancewicz-1994}, which UNESCO defines as {\it vulnerable}.\footnote{\href{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}} Virtually the entire population of around 800 Naskapi live within the reservation Kawawachikamach, around 10 miles from Schefferville, QC.
+Naskapi is a Cree language in the Algonquin family spoken in central Quebec \cite{MacKenzie-and-Jancewicz-1994}, which UNESCO defines as {\it vulnerable}.\footnote{\href{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}} Virtually the entire population of around 800 Naskapi live within the reservation Kawawachikamach, around 10 miles from Schefferville, QC. \citet{lewis2009ethnologue} classifies Naskapi as 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk . Last accessed April~27, 2018.}} Naskapi has two scripts; both Latin, and the Unified Canadian Aboriginal Syllabics. %TODO cite 
+Kornai's digital vitality index awkwardly declares it to be {\it dead}.\footnote{\href{https://hlt.bme.hu/en/dld/language/5651}{https://hlt.bme.hu/en/dld/language/5651. Last accessed April~27, 2018.}}
+
 
 %In October 2017 I travelled to Schefferville and interviewed linguists working on a Naskapi bible, visited the school and talked to teachers at length about language efforts there, and talked to individuals around the town about their thoughts on the language and how it is used. I'll include a summary of Naskapi here, outlining current efforts and future possibilities for the language, and how open source code can help.
 
@@ -36,6 +53,7 @@ Schefferville is only accessible by train or plane, and contains another local t
 The Naskapi speak English as a first or second language, while the Innu speak French (and some speak three or all four languages). They moved to Kawawachikamach in the 1960s, after initially being resettled in Schefferville in the early 1950s. Some of the elders still remember being a nomadic people who followed caribou and were raised in the bush. However, half of the population is under the age of 16, as the First Nations population is the largest growing population in Canada.\footnote{http://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}
 
 All of the Naskapi speak their own language regularly, in all contexts. In the schools, there are Naskapi-only classes held until Grade 8 \cite{llewellyn2017oral}. While there are a few social workers, teachers, and nurses who speak solely English, most jobs in Kawawachikamach are held by Naskapi. There has been a long tradition of missionaries, and almost all of the Naskapi are Protestant. At church, they use Montagnais hymnals and an Montagnais bible.
+
 
 \subsubsection{Literacy developments}
 In recent years, the Naskapi Development Council, which works with translators provided by the local tribal council (called the Band), has produced a Naskapi to English bilingual dictionary in three volumes \cite{MacKenzie-and-Jancewicz-1994}. This was produced by linguists from the Summer Institute of Linguistics, funded by Wycliffe Bible Translators.\footnote{\href{https://www.wycliffe.org/}{https://www.wycliffe.org/}}
