--- a/references.bib
+++ b/references.bib
@@ -335,6 +335,15 @@ publisher={Blackwell}
   publisher={Elsevier}
 }
 
+@article{salminen2007endangered,
+  title={Endangered languages in {Europe}},
+  author={Salminen, Tapani},
+  journal={Language diversity endangered},
+  pages={205--32},
+  year={2007}
+}
+
+
 @misc{bord2018national,
   title={National {Gaelic} Language Plan 2018-2023},
   author={{B\`ord na G\`aidhlig}},
@@ -396,6 +405,16 @@ publisher={Blackwell}
   pages={1084--1089},
   year={2012}
 }
+
+@inproceedings{goldhahn2012building,
+  title={Building Large Monolingual Dictionaries at the Leipzig Corpora Collection: From 100 to 200 Languages.},
+  author={Goldhahn, Dirk and Eckart, Thomas and Quasthoff, Uwe},
+  booktitle={Proceedings of the 8th International Conference on Language Resources and Evaluation ({LREC}},
+  volume={29},
+  pages={31--43},
+  year={2012}
+}
+
 
 @article{bender2016linguistic,
   title={Linguistic typology in natural language processing},
@@ -809,6 +828,87 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
   volume={16},
   year={2009},
   publisher={SIL international Dallas, TX}
+}
+
+@inproceedings{ui2006part,
+  title={A {Part-of-Speech} tagger for {Irish} using finite state morphology and constraint grammar disambiguation},
+  author={U{\'\i} Dhonnchadha, Elaine and van Genabith, Josef},
+  year={2006},
+  booktitle={Proceedings of the 5th International Conference on Language Resources and Evaluation ({LREC})},
+  pages={2241-2244}
+}
+
+@article{batchelor2016automatic,
+  title={Automatic derivation of categorial grammar from a part-of-speech-tagged corpus in {Scottish Gaelic}},
+  author={Batchelor, Colin},
+  journal={PARIS Inalco du 4 au 8 juillet 2016},
+  pages={1},
+  year={2016}
+}
+
+@inproceedings{batchelor2014gdbank,
+  title={gdbank: The beginnings of a corpus of dependency structures and type-logical grammar in {Scottish Gaelic}},
+  author={Batchelor, Colin},
+  booktitle={Proceedings of the First {Celtic} Language Technology Workshop},
+  pages={60--65},
+  year={2014}
+}
+
+@article{salminen2007europe,
+  title={Europe and {North Asia}},
+  author={Salminen, Tapani},
+  journal={Encyclopedia of the world’s endangered languages},
+  pages={211--280},
+  year={2007}
+}
+
+@book{mackinnon1991past,
+  title={Gaelic - A Past and Future Prospect},
+  author={MacKinnon, K.},
+  year={1991},
+  publisher={Saltire Society}
+}
+
+@article{wolters1997diphone,
+  title={A diphone-based text-to-speech system for {Scottish Gaelic}},
+  author={Wolters, Maria},
+  journal={A Master Thesis presented to the University of Bonn, Bonn, Germany},
+  year={1997}
+}
+
+
+@article{lamb2016developing,
+  title={Developing Word Embedding Models for {Scottish Gaelic}},
+  author={Lamb, William and Sinclair, Mark},
+  journal={PARIS Inalco du 4 au 8 juillet 2016},
+  pages={31},
+  year={2016}
+}
+
+
+
+@inproceedings{lamb2014developing,
+  title={Developing an automatic part-of-speech tagger for {Scottish Gaelic}},
+  author={Lamb, William and Danso, Samuel},
+  booktitle={Proceedings of the First {Celtic} Language Technology Workshop},
+  pages={1--5},
+  year={2014}
+}
+
+
+@misc{lamb2014scottish,
+  author={Lamb, W. and Naismith, S},
+  year={2014},
+  title={Scottish {Gaelic} Part-of-Speech Annotation Guidelines}
+}
+
+
+@misc{ARCOSG2016,
+  author={Lamb, William and Arbuthnot, Sharon and Naismith, Susanna and Danso, Samuel},
+  year={2016},
+  title={Annotated Reference Corpus of {Scottish Gaelic} ({ARCOSG}), 1997-2016 [dataset]},
+  publisher={University of {Edinburgh}. {School of Literatures, Languages and Cultures. Celtic and Scottish Studies}},
+  doi={http://dx.doi.org/10.7488/ds/1411}
 }
 
 @article{bourhis2001reversing,
