--- a/case-studies.tex
+++ b/case-studies.tex
@@ -20,14 +20,14 @@ Gaelic has an EGIDS rating of 2, as it is a provincial language given the 2005 G
 \subsubsection{Language Resources}
 \label{subsec:gaelic-resources}
 
-Gaelic has a long, written history. Today, there are a plethora of written, audio, and video resources. Some of these have been bundled into linguistic corpora. The DASG is the largest corpus for Gaelic available on the web; however, it is not permissively licensed for modification, distribution, or reproduction, and so cannot be considered open source (although it is open access).\footnote{\href{http://dasg.ac.uk/about/terms/en}{http://dasg.ac.uk/about/terms/en. Last accessed April~27, 2018.}} OLAC has 26 resources for Gaelic, including large multilingual corpora, as well.\footnote{\href{http://www.language-archives.org/language/gla}{http://www.language-archives.org/language/gla. Last accessed April~27, 2018.}} A large corpus compiled by the An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}} \citep{scannell2007crubadan}. WALS has 61 typological features listed for Gaelic\footnote{\href{http://wals.info/languoid/lect/wals_code_gae}{http://wals.info/languoid/lect/wals\_code\_gae. Last accessed April~27, 2018.}}, and Glottolog 35 references.\footnote{\href{http://glottolog.org/resource/languoid/id/scot1245}{http://glottolog.org/resource/languoid/id/scot1245. Last accessed April~27, 2018.}} ODIN has 59 IGT entries for Scottish Gaelic.\footnote{\href{http://odin.linguistlist.org/}{http://odin.linguistlist.org/. Last accessed April~27, 2018.}}
+Gaelic has a long, written history. Today, there are a plethora of written, audio, and video resources. Some of these have been bundled into linguistic corpora. The DASG is the largest corpus for Gaelic available on the web; however, it is not permissively licensed for modification, distribution, or reproduction, and so cannot be considered open source (although it is open access).\footnote{\href{http://dasg.ac.uk/about/terms/en}{http://dasg.ac.uk/about/terms/en. Last accessed April~27, 2018.}} OLAC has 26 resources for Gaelic, including large multilingual corpora, as well.\footnote{\href{http://www.language-archives.org/language/gla}{http://www.language-archives.org/language/gla. Last accessed April~27, 2018.}} A large corpus compiled by An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}} \citep{scannell2007crubadan}. WALS has 61 typological features listed for Gaelic\footnote{\href{http://wals.info/languoid/lect/wals_code_gae}{http://wals.info/languoid/lect/wals\_code\_gae. Last accessed April~27, 2018.}}, and Glottolog 35 references.\footnote{\href{http://glottolog.org/resource/languoid/id/scot1245}{http://glottolog.org/resource/languoid/id/scot1245. Last accessed April~27, 2018.}} ODIN has 59 IGT entries for Scottish Gaelic.\footnote{\href{http://odin.linguistlist.org/}{http://odin.linguistlist.org/. Last accessed April~27, 2018.}}
 
 Some of these corpora are annotated - for instance, the Annotated Reference Corpus of Scottish Gaelic (ARCOSG)\footnote{\href{https://datashare.is.ed.ac.uk/handle/10283/2011}{https://datashare.is.ed.ac.uk/handle/10283/2011. Last accessed April~27, 2018.}} \citep{ARCOSG2016, lamb2014scottish}, which used an Irish POS tagger \citep{ui2006part} to project annotations, and which was funded by the B\`ord na G\`aighlig. This resource was used to automatically derive categorial grammars \citep{batchelor2016automatic}, and to develop POS taggers directly for Gaelic \citep{lamb2014developing}. A dependcy-structure corpus is being developed \citep{batchelor2014gdbank}, as are word-embedding models \citep{lamb2016developing}. The source code for \citet{batchelor2014gdbank, batchelor2016automatic} is available on GitHub.\footnote{\href{https://github.com/colinbatchelor/gdbank/}{https://github.com/colinbatchelor/gdbank/. Last accessed April~27, 2018.}} Some of these papers were presented at the first Celtic Language Technology Workshop in Dublin in 2014. The amount of resources show clearly that Gaelic is not entirely on the fringe of academic research, although it is generally considered a low resource language. 
 
 The Cr\'ubad\'an corpus was used to create an open source Hunspell spellchecker\footnote{\href{https://github.com/kscanne/hunspell-gd }{https://github.com/kscanne/hunspell-gd . Last accessed April~27, 2018.}}\footnote{\href{https://github.com/gooselinux/hunspell-gd}{https://github.com/gooselinux/hunspell-gd} is probably derivative. Last accessed April~27, 2018}, which is the spellchecker for "LibreOffice, OpenOffice.org, Mozilla Firefox 3 and Thunderbird, Google Chrome, and it is also used by proprietary software packages, like macOS, InDesign, memoQ, Opera and SDL Trados."\footnote{\href{https://hunspell.github.io/}{https://hunspell.github.io/. Last accessed April~27, 2018.}} This spellchecker was built with the help of Michael Bauer, an independent Gaelic technologist who runs a small Gaelic technology consultancy called Am Faclair Beag\footnote{\href{http://www.faclair.com/}{http://www.faclair.com/. Last accessed April~27, 2018.}}, and also has ports for OpenOffice directly\footnote{\href{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/. Last accessed April~27, 2018.}} and a Firefox extension.\footnote{\href{https://extensions.openoffice.org/en/project/faclair-afb}{https://extensions.openoffice.org/en/project/faclair-afb. Last accessed April~27, 2018.}} An Faclair Beag also offers an online dictionary with over 85k words\footnote{\href{http://www.faclair.com/GaelicDictionaryAbout.html\#About}{http://www.faclair.com/GaelicDictionaryAbout.html\#About. Last accessed April~27, 2018.}} 
  (and almost a million forms\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html. Last accessed April~27, 2018.}}) and in inbuilt lemmatizer.\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html. Last accessed April~27, 2018.}} 
  
- More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh. Last accessed April~27, 2018.}} (pronounced 'Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\'ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\'{U}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/. Last accessed April~27, 2018.}}, which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
+ More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh. Last accessed April~27, 2018.}} (pronounced 'Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\`ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\`{o}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/. Last accessed April~27, 2018.}}, which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
  
 Navigating resources to identify what is open source and what isn't is difficult. As mentioned in Section~\ref{subsec:where-is-open-source-code}, one of the OSI's definitions for open source was that it be well publicised. This cannot be said to be the case for coding resources for Gaelic; there is no central location for viewing tools. The LRE Map has no Gaelic resources, although a POS Tagger, two corpora, a tokenizer, and Babouk corpus tool resource are mentioned for Irish.\footnote{\href{http://www.resourcebook.eu/searchll.php}{http://www.resourcebook.eu/searchll.php. Last accessed April~27, 2018.}} Linghub returns 30 entries - not many, considering it is an aggregator.\footnote{\href{http://linghub.org/search/?offset=20&query=Gaelic}{http://linghub.org/search/?offset=20\&query=Gaelic. Last accessed April~27, 2018.}} GitHub returns 62 repositories that mention Gaelic\footnote{\href{https://github.com/search?q=gaelic}{https://github.com/search?q=gaelic. Last accessed April~27, 2018.}}, although it is unclear if these are for Irish.
 
