Add support for Naskapi syllabics

--- a/case-studies.tex
+++ b/case-studies.tex
@@ -42,7 +42,7 @@ Ideally, researchers would start to open source more of their code involving Gae
 
 % \subsubsection{Language Background}
 
-Naskapi is a Cree language in the Algonquin family spoken in central Quebec \cite{MacKenzie-and-Jancewicz-1994}, which UNESCO defines as {\it vulnerable}.\footnote{\href{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}} Virtually the entire population of around 800 Naskapi live within the reservation Kawawachikamach, around 10 miles from Schefferville, QC. \citet{lewis2009ethnologue} classifies Naskapi as 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk . Last accessed April~27, 2018.}} Naskapi has two scripts; both Latin, and the Unified Canadian Aboriginal Syllabics. %TODO cite 
+Naskapi (autonymically \sylla{naskapi} naskapi or \sylla{iyuw iyimuun} iyuw iyimuun) is a Cree language in the Algonquin family spoken in central Quebec \cite{MacKenzie-and-Jancewicz-1994}, which UNESCO defines as {\it vulnerable}.\footnote{\href{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}} Virtually the entire population of around 800 Naskapi live within the reservation Kawawachikamach, around 10 miles from Schefferville, QC. \citet{lewis2009ethnologue} classifies Naskapi as 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk . Last accessed April~27, 2018.}} Naskapi has two scripts; both Latin, and the Unified Canadian Aboriginal Syllabics. %TODO cite 
 Kornai's digital vitality index awkwardly declares it to be {\it dead}.\footnote{\href{https://hlt.bme.hu/en/dld/language/5651}{https://hlt.bme.hu/en/dld/language/5651. Last accessed April~27, 2018.}}
 
 
