--- a/thesiscommands.sty
+++ b/thesiscommands.sty
@@ -266,3 +266,6 @@
 \usepackage[nottoc]{tocbibind}
 % Rename to References
 \renewcommand{\bibname}{References}
+
+% Syllabics
+\usepackage{casyltex}
