Finish Chapter 6: Case studies

--- a/references.bib
+++ b/references.bib
@@ -731,6 +731,18 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
   year={2016}
 }
 
+@article{jancewicz2002applied,
+  title={Applied computer technology in Cree and Naskapi language programs},
+  author={Jancewicz, Bill and MacKenzie, Marguerite},
+  year={2002},
+  journal={Language Learning and Technology},
+  volume={6},
+  number={2},
+  pages={83-91},
+  publisher={University of Hawaii National Foreign Language Resource Center}
+}
+
+
 @book{ginsburgh2011many,
   title={How many languages do we need?: The economics of linguistic diversity},
   author={Ginsburgh, Victor and Weber, Shiomo},
@@ -1648,7 +1660,7 @@ title = {Directory International cooperation programs for the protection and pro
  address = {Stroudsburg, PA, USA},
 }
 
-@incollection{grenoble_2011,
+@incollection{grenoble2011cambridge,
  address  = {Cambridge},
  author  = {Lenore A. Grenoble},
  booktitle = {The {Cambridge} Handbook of Endangered Languages},
@@ -1734,13 +1746,6 @@ title = {Directory International cooperation programs for the protection and pro
   publisher={Oxford University Press}
 }
 
-@article{jancewicz2002applied,
-  title={Applied computer technology in {Cree} and {Naskapi} language programs},
-  author={Jancewicz, Bill and MacKenzie, Marguerite},
-  year={2002},
-  publisher={University of Hawaii National Foreign Language Resource Center}
-}
-
 @article{kornai2013digital,
  title={Digital language death},
  author={Kornai, Andr{\'a}s},
@@ -1751,6 +1756,15 @@ title = {Directory International cooperation programs for the protection and pro
  year={2013},
  publisher={Public Library of Science}
 }
+
+@inproceedings{jancewicz1998developing,
+  title={Developing language programs with the Naskapi of Quebec},
+  author={Jancewicz, Bill},
+  booktitle={Proceedings of the second FEL conference: Endangered languages--What role for the specialist},
+  pages={25--32},
+  year={1998}
+}
+
 
 @article{kornai2015new,
   title={A New Method of Language Vitality Assessment},
@@ -1798,13 +1812,23 @@ title = {Directory International cooperation programs for the protection and pro
  wals_code = {nsk}
 }
 
-@book{MacKenzie-1980,
+@book{macKenzie1980towards,
  title={Towards a Dialectology of {Cree-Montagnais-Naskapi}},
  author={MacKenzie, M.E.},
  publisher={University of Toronto},
  url={https://books.google.ca/books?id=u\_MBPwAACAAJ},
  year={1980}
 }
+
+@article{bennett1991cree,
+  title={Cree literacy in the syllabic script},
+  author={Bennett, Jo Anne and Berry, John W},
+  journal={Literacy and orality},
+  pages={90--104},
+  year={1991},
+  publisher={Cambridge University Press}
+}
+
 
 @book{llewellyn2017oral,
  title={Oral History and Education: Theories, Dilemmas, and Practices},
