--- a/thesis.tex
+++ b/thesis.tex
@@ -7,6 +7,11 @@
 \documentclass[12pt,a4paper]{article}
 \usepackage{thesiscommands}
 
+
+% IGT
+% Important; include last
+\usepackage{gb4e}
+
 %\drafttrue % or
 \draftfalse
 
