Finished Chapter 7: Methods

--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,40 @@
   publisher={The University of Chicago Press}
 }
 
+@InProceedings{LittEdulearn,
+  author    = {Richard Littauer and Antonia Scheidel and Marc Schulder and Sibel Ciddi},
+  title     = {Crowd Sourcing the Classroom: Interactive Applications in Higher Learning},
+  booktitle = {Proceedings of the 4th International Conference on Education and New Learning Technologies (EDULEARN12)},
+  month     = {July},
+  year      = {2012},
+  pages     = {1473-1481},
+  publisher = {International Association of Technology, Education and Development (IATED)},
+  editor    = {L. G\'omez Chova, L. and I. Candel Torres and A. L\'opez Mart\'inez},
+  address   = {Barcelona, Spain},
+  ibsn      = {978-84-695-3491-5},
+}
+
+
+
+@article{wiggins2013data,
+  title={Data management guide for public participation in scientific research},
+  author={Wiggins, Andrea and Bonney, Rick and Graham, Eric and Henderson, Sandra and Kelling, Steve and LeBuhn, Gretchen and Litauer, R and Lots, K and Michener, W and Newman, G},
+  journal={DataOne Working Group},
+  pages={1--41},
+  year={2013}
+}
+
+@inproceedings{LittIDCC,
+	Abstract  = {Scientific workflows are typically used to automate the processing, analysis, and management of scientific data. Most scientific workflow programs provide a user-friendly graphical user interface that enables scientists to more easily create and visualize complex workflows that may be comprised of dozens of processing and analytical steps. Furthermore, many workflows provide mechanisms for tracing provenance and methodologies that foster reproducible science. Despite their potential for enabling science, few studies have examined how the process of creating, executing, and sharing workflows can be improved. In order to promote open discourse and access to scientific methods as well as data, we analyzed a wide variety of workflow systems and publicly-available workflows on the public repository myExperiment. It is hoped that understanding the usage of workflows and developing a set of recommended best practices will lead to increased contribution of workflows to the public domain.},
+	Author    = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
+	Journal   = {7th International Digital Curation Conference Proceedings},
+	Month     = {December},
+	Title     = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
+	Year      = {2011}
+}
+
+
+
 @article{newman2007copyright,
   title={Copyright essentials for linguists},
   author={Newman, Paul},
