Update label and tex rendering

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,3 +1,5 @@
-\section{Conclusion}\label{sec:conclusion}
+% !TEX root = thesis.tex
+\section{Conclusion}
+\label{sec:conclusion}
 
 Here I will conclude with some closing remarks.
