--- a/discussion.tex
+++ b/discussion.tex
@@ -1,6 +1,8 @@
-\section{Discussion}\label{sec:discussion}
+% !TEX root = thesis.tex
+\section{Discussion}
+\label{sec:discussion}
 
-Here, I want to drive home the point; how open source can help languages. Specifically, I will cover:
+So: how can the open source methodology for software development low resource languages?
 
 \subsection{Why isn't more code open?}
 
