--- a/future-work.tex
+++ b/future-work.tex
@@ -1,4 +1,6 @@
-\section{Future Work}\label{sec:future-work}
+% !TEX root = thesis.tex
+\section{Future Work}
+\label{sec:future-work}
 
 Here, I'll talk about where to go next.
 
